--- a/demo/dockerfile
+++ b/demo/dockerfile
@@ -1,12 +1,12 @@
-# Use Maven image to build the app
-FROM maven:3.9.6-eclipse-temurin-17 AS build
+# Use Maven with Java 21 to build
+FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-# Use JDK base image to run the app
-FROM eclipse-temurin:17-jdk
+# Use Java 21 to run
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
-EXPOSE 8092
+EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
