--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,8 +8,9 @@ spring.data.mongodb.database=BookingEntries
 Secret.Key=${APP_SECRET_KEY}
 
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.ssl.enabled=true
+spring.redis.url=${REDIS_URL}
+
 
 stripe.api.key=${STRIPE_API_KEY}
 
