--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.data.mongodb.database=BookingEntries
 
 Secret.Key=${APP_SECRET_KEY}
 
-spring.cache.type=redis
+spring.redis.host=ethical-gorilla-13755.upstash.io
+spring.redis.port=6379
+spring.redis.username=default
+spring.redis.password=${REDIS_URL_PASSWORD}
 spring.redis.ssl.enabled=true
-spring.redis.url=${REDIS_URL}
-
 
 stripe.api.key=${STRIPE_API_KEY}
 
