--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,8 +10,9 @@ Secret.Key=${APP_SECRET_KEY}
 spring.redis.host=ethical-gorilla-13755.upstash.io
 spring.redis.port=6379
 spring.redis.username=default
-spring.redis.password=${REDIS_URL_PASSWORD}
+spring.redis.password=your-actual-upstash-password
 spring.redis.ssl.enabled=true
+
 
 stripe.api.key=${STRIPE_API_KEY}
 
