--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,12 +7,9 @@ spring.data.mongodb.database=BookingEntries
 
 Secret.Key=${APP_SECRET_KEY}
 
-spring.redis.host=ethical-gorilla-13755.upstash.io
-spring.redis.port=6379
-spring.redis.username=default
-spring.redis.password=your-actual-upstash-password
-spring.redis.ssl.enabled=true
 
+spring.redis.url=redis://default:ATW7AAIjcDE3Y2E3NzhkNzc5Mjg0NGE5OGYzMTAxYzYyMTc0YmQxZXAxMA@ethical-gorilla-13755.upstash.io:6379
+spring.redis.ssl.enabled=true
 
 stripe.api.key=${STRIPE_API_KEY}
 
