--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.redis.host=ethical-gorilla-13755.upstash.io
 spring.redis.port=6379
 spring.redis.password=ATW7AAIjcDE3Y2E3NzhkNzc5Mjg0NGE5OGYzMTAxYzYyMTc0YmQxZXAxMA
 spring.redis.ssl.enabled=true
+spring.redis.tls.enabled=true
 
 
 stripe.api.key=${STRIPE_API_KEY}
